--- a/templates/03-rds.yaml
+++ b/templates/03-rds.yaml
@@ -58,8 +58,22 @@ Parameters:
       - db.r4.4xlarge
       - db.r4.8xlarge
       - db.r4.16xlarge
+      - db.r5.large
+      - db.r5.xlarge
+      - db.r5.2xlarge
+      - db.r5.4xlarge
+      - db.r5.8xlarge
+      - db.r5.16xlarge
+      - db.r6g.large
+      - db.r6g.xlarge
+      - db.r6g.2xlarge
+      - db.r6g.4xlarge
+      - db.r6g.8xlarge
+      - db.r6g.16xlarge
+      - db.t3.medium
+      - db.t3.large
     ConstraintDescription: Must be a valid RDS instance class.
-    Default: db.r4.large
+    Default: db.t3.medium
     Description: The Amazon RDS database instance class.
     Type: String
   # DatabaseMasterUsername:
