--- a/templates/03-elasticache.yaml
+++ b/templates/03-elasticache.yaml
@@ -55,6 +55,18 @@ Parameters:
       - cache.r5.xlarge
       - cache.r5.2xlarge
       - cache.r5.4xlarge
+      - cache.m6g.large
+      - cache.m6g.xlarge
+      - cache.m6g.2xlarge
+      - cache.m6g.4xlarge
+      - cache.m6g.8xlarge
+      - cache.m6g.16xlarge
+      - cache.r6g.large
+      - cache.r6g.xlarge
+      - cache.r6g.2xlarge
+      - cache.r6g.4xlarge
+      - cache.r6g.8xlarge
+      - cache.r6g.16xlarge
     ConstraintDescription: Must be a valid Amazon ElastiCache node type.
     Default: cache.t3.micro
     Description: The Amazon ElastiCache cluster node type.
