--- a/templates/03-rds.yaml
+++ b/templates/03-rds.yaml
@@ -66,6 +66,13 @@ Parameters:
       - db.r5.16xlarge
       - db.t3.medium
       - db.t3.large
+      - db.r6g.large
+      - db.r6g.xlarge
+      - db.r6g.2xlarge
+      - db.r6g.4xlarge
+      - db.r6g.8xlarge
+      - db.r6g.12xlarge
+      - db.r6g.16xlarge
     ConstraintDescription: Must be a valid RDS instance class.
     Default: db.t3.medium
     Description: The Amazon RDS database instance class.
