--- a/templates/04-web.yaml
+++ b/templates/04-web.yaml
@@ -243,6 +243,25 @@ Parameters:
       - p3.2xlarge 
       - p3.8xlarge 
       - p3.16xlarge
+      - t4g.nano 
+      - t4g.medium 
+      - t4g.micro 
+      - t4g.small 
+      - t4g.medium 
+      - t4g.xlarge 
+      - t4g.2xlarge 
+      - m6g.large 
+      - m6g.xlarge 
+      - m6g.2xlarge 
+      - m6g.4xlarge 
+      - m6g.8xlarge 
+      - m6g.16xlarge 
+      - r6g.large 
+      - r6g.xlarge 
+      - r6g.2xlarge 
+      - r6g.4xlarge 
+      - r6g.8xlarge 
+      - r6g.16xlarge 
     ConstraintDescription: Must be a valid Amazon EC2 instance type.
     Default: t3.medium
     Description: The Amazon EC2 instance type for your web instances.
@@ -258,9 +277,14 @@ Parameters:
     Description: The main language used in the Moodle configuration wizard.
     Type: String
     Default: en
-  LatestAmiId :
-    Type : AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
+  LatestAmiId:
+    ConstraintDescription: Must be valid AMI Id
+    Description: Select the type of AMI depending upon Intel/AMD x86 architecture or Graviton2 AMR architecture
+    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
+    AllowedValues:
+      - /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2
+      - /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-arm64-gp2
+    Default: /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2
 
 
 Conditions:
