--- a/templates/00-master.yaml
+++ b/templates/00-master.yaml
@@ -16,7 +16,6 @@ Metadata:
         - HostedZoneName
         - DomainName
         - UseRoute53Boolean
-        - LatestAmiId
     - Label:
         default: Network
       Parameters:
@@ -84,8 +83,6 @@ Metadata:
       Parameters:
         - MoodleLocale
     ParameterLabels:
-      LatestAmiId:
-        default: Latest AMI Id
       BastionInstanceType:
         default: Bastion Instance Type
       CloudFrontAcmCertificate:
@@ -240,10 +237,10 @@ Parameters:
     - r5.8xlarge 
     - r5.16xlarge 
     - t4g.nano 
-    - t4g.medium 
     - t4g.micro 
     - t4g.small 
     - t4g.medium 
+    - t4g.large 
     - t4g.xlarge 
     - t4g.2xlarge 
     - m6g.large 
@@ -263,14 +260,9 @@ Parameters:
     Default: t3.nano
     Description: Bastion EC2 instance type.
     Type: String
-  LatestAmiId:
-    ConstraintDescription: Must be valid AMI Id
-    Description: Select the type of AMI depending upon Intel/AMD x86 architecture or Graviton2 AMR architecture
+  LatestAmiId :
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    AllowedValues:
-      - /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2
-      - /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-arm64-gp2
-    Default: /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2
+    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
   PublicAlbAcmCertificate:
     AllowedPattern: ^$|(arn:aws:acm:)([a-z0-9/:-])*([a-z0-9])$
     Description: '[ Optional ] The AWS Certification Manager certificate ARN for the ALB certificate - this certificate should be created in the region you wish to run the ALB and must reference the domain name you use below.'
@@ -414,10 +406,10 @@ Parameters:
     - r5.8xlarge 
     - r5.16xlarge 
     - t4g.nano 
-    - t4g.medium 
     - t4g.micro 
     - t4g.small 
     - t4g.medium 
+    - t4g.large 
     - t4g.xlarge 
     - t4g.2xlarge 
     - m6g.large 
@@ -627,10 +619,10 @@ Parameters:
       - p3.8xlarge 
       - p3.16xlarge
       - t4g.nano 
-      - t4g.medium 
       - t4g.micro 
       - t4g.small 
       - t4g.medium 
+      - t4g.large 
       - t4g.xlarge 
       - t4g.2xlarge 
       - m6g.large 
