--- a/templates/03-bastion.1.yaml
+++ b/templates/03-bastion.1.yaml
@@ -28,7 +28,6 @@ Metadata:
         default: Subnets
 
 Parameters:
-
   BastionSecurityGroup:
     Description: Select the bastion security group.
     Type: AWS::EC2::SecurityGroup::Id
@@ -123,7 +122,10 @@ Parameters:
     Type: List<AWS::EC2::Subnet::Id>
   LatestAmiId:
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
+    AllowedValues:
+      - !Join [ '', [ '/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-', !Ref LatestAmiType, '-gp2' ] ]
+    Default: '/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-arm64-gp2'
+    #Default: !Join [ '', [ '/aws/service/ami-amazon-linux-latest/amzn-ami-hvm-', !Ref LatestAmiType, '-gp2' ] ]
     
 Conditions:
 
