--- a/templates/04-web.yaml
+++ b/templates/04-web.yaml
@@ -244,10 +244,10 @@ Parameters:
       - p3.8xlarge 
       - p3.16xlarge
       - t4g.nano 
-      - t4g.medium 
       - t4g.micro 
       - t4g.small 
       - t4g.medium 
+      - t4g.large
       - t4g.xlarge 
       - t4g.2xlarge 
       - m6g.large 
@@ -277,14 +277,9 @@ Parameters:
     Description: The main language used in the Moodle configuration wizard.
     Type: String
     Default: en
-  LatestAmiId:
-    ConstraintDescription: Must be valid AMI Id
-    Description: Select the type of AMI depending upon Intel/AMD x86 architecture or Graviton2 AMR architecture
+  LatestAmiId :
     Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
-    AllowedValues:
-      - /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2
-      - /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-arm64-gp2
-    Default: /aws/service/ami-amazon-linux-latest/amzn-ami-hvm-x86_64-gp2
+    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
 
 
 Conditions:
