--- a/arm-templates/04-web.yaml
+++ b/arm-templates/04-web.yaml
@@ -176,7 +176,7 @@ Parameters:
       - r6g.8xlarge 
       - r6g.16xlarge 
     ConstraintDescription: Must be a valid Amazon EC2 instance type.
-    Default: t3.medium
+    Default: t4g.large
     Description: The Amazon EC2 instance type for your web instances.
     Type: String
   WebSecurityGroup:
