--- a/arm-templates/04-efsalarms.yaml
+++ b/arm-templates/04-efsalarms.yaml
@@ -59,54 +59,6 @@ Parameters:
     Type: String
   InstanceType:
     AllowedValues:
-      - t2.nano 
-      - t2.micro 
-      - t2.small 
-      - t2.medium 
-      - t2.large 
-      - t2.xlarge 
-      - t2.2xlarge 
-      - t3.nano 
-      - t3.micro 
-      - t3.small 
-      - t3.medium 
-      - t3.large 
-      - t3.xlarge 
-      - t3.2xlarge 
-      - m4.large 
-      - m4.xlarge 
-      - m4.2xlarge 
-      - m4.4xlarge 
-      - m4.10xlarge 
-      - m4.16xlarge 
-      - m5.large 
-      - m5.xlarge 
-      - m5.2xlarge 
-      - m5.4xlarge 
-      - m5.12xlarge 
-      - m5.24xlarge 
-      - c4.large 
-      - c4.xlarge 
-      - c4.2xlarge 
-      - c4.4xlarge 
-      - c4.8xlarge 
-      - c5.large 
-      - c5.xlarge 
-      - c5.2xlarge 
-      - c5.4xlarge 
-      - c5.8xlarge
-      - r4.large 
-      - r4.xlarge 
-      - r4.2xlarge 
-      - r4.4xlarge 
-      - r4.8xlarge 
-      - r4.16xlarge 
-      - r5.large 
-      - r5.xlarge 
-      - r5.2xlarge 
-      - r5.4xlarge 
-      - r5.8xlarge 
-      - r5.16xlarge 
       - t4g.nano 
       - t4g.medium 
       - t4g.micro 
@@ -127,7 +79,7 @@ Parameters:
       - r6g.8xlarge 
       - r6g.16xlarge 
     ConstraintDescription: Must be a valid Amazon EC2 instance type.
-    Default: t3.nano
+    Default: t4g.nano
     Description: The Amazon EC2 instance type that dynamically adjusts thresholds based on permitted throughput changes.
     Type: String
   EC2KeyName:
